# stratum-dev

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE
.circleci/: bazelrc  build-targets.txt  check-bazel-format.sh  check-cpp-format.sh  test-targets.txt
.github/: CODEOWNERS  es2k-tests.txt  test-dpdk.sh  test-es2k.sh
.reuse/: dep5
bazel/: deps.bzl  workspace_rule.bzl
stratum/: CMakeLists.txt
stratum/glue/: BUILD  CMakeLists.txt  init_google.h  logging.cc  platform.h  stamping.h
stratum/glue/gtl/: CMakeLists.txt
stratum/glue/status/: CMakeLists.txt  status_macros.cc  status_macros.h
stratum/hal/lib/common/: BUILD  CMakeLists.txt  common.proto  config_monitoring_service.cc  config_monitoring_service_test.cc  gnmi_events.h  gnmi_publisher.cc  gnmi_publisher.h  gnmi_publisher_test.cc  hal.cc  hal.h  hal_test.cc  openconfig_converter.cc  p4_service.cc  p4_service.h  p4_service_test.cc  target_options.cc  target_options.h  utils.cc  utils.h  utils_test.cc  yang_add_subtree_interface.cc  yang_parse_tree.cc  yang_parse_tree_chassis.cc  yang_parse_tree_component.cc  yang_parse_tree_component.h  yang_parse_tree_helpers.h  yang_parse_tree_interface.cc  yang_parse_tree_interface.h  yang_parse_tree_node.cc  yang_parse_tree_optical.cc  yang_parse_tree_paths.cc  yang_parse_tree_singleton.cc  yang_parse_tree_system.cc
stratum/hal/lib/p4/: BUILD  CMakeLists.txt  p4_extern_manager.h  p4_info_manager.cc  p4_info_manager.h  p4_info_manager_mock.h  p4_info_manager_test.cc  p4_resource_map.h  p4_static_entry_mapper.cc  test_main.cc
stratum/hal/lib/phal/: CMakeLists.txt  attribute_group.cc  datasource.cc  optics_adapter.cc  phaldb_service.cc  regex_datasource.h  sfp_adapter.cc
stratum/hal/lib/phal/onlp/: onlp_cli.cc  onlp_fan_datasource.cc
stratum/hal/lib/tdi/: BUILD  CMakeLists.txt  struct.h  tdi.proto  tdi_action_profile_manager.cc  tdi_action_profile_manager_test.cc  tdi_bf_status.h  tdi_constants.h  tdi_counter_manager.cc  tdi_direct_counter_handler.cc  tdi_direct_counter_handler.h  tdi_direct_meter_handler.cc  tdi_direct_meter_handler.h  tdi_extern_manager.cc  tdi_extern_manager.h  tdi_extern_manager_test.cc  tdi_fixed_function_manager.cc  tdi_fixed_function_manager.h  tdi_fixed_function_manager_test.cc  tdi_get_meter_units.h  tdi_id_mapper.cc  tdi_ipsec_manager.cc  tdi_ipsec_manager.h  tdi_ipsec_manager_mock.h  tdi_lut_manager.cc  tdi_lut_manager.h  tdi_lut_manager_test.cc  tdi_meter_handler.cc  tdi_meter_handler.h  tdi_node.cc  tdi_node.h  tdi_packetio_manager.cc  tdi_pipeline_utils.cc  tdi_pkt_mod_meter_config.cc  tdi_pkt_mod_meter_config.h  tdi_port_manager.cc  tdi_port_manager.h  tdi_pre_manager.cc  tdi_resource_handler.h  tdi_resource_mapper.cc  (+29 more)
stratum/hal/lib/tdi/dpdk/: BUILD  CMakeLists.txt  dpdk_add_subtree_interface.cc  dpdk_chassis_manager.cc  dpdk_chassis_manager.h  dpdk_chassis_manager_test.cc  dpdk_hal.cc  dpdk_hal.h  dpdk_hal_test.cc  dpdk_parse_tree_interface.cc  dpdk_parse_tree_interface.h  dpdk_port_config.cc  dpdk_port_config.h  dpdk_port_config_test.cc  dpdk_port_constants.h  dpdk_port_manager.cc  dpdk_port_manager.h  dpdk_port_manager_dummy.cc  dpdk_port_manager_mock.h  dpdk_sde_target.cc  dpdk_sde_wrapper.cc  dpdk_switch.cc  dpdk_switch.h  dpdk_switch_test.cc  dpdk_tdi_status_test.cc
stratum/hal/lib/tdi/es2000/: BUILD  es2k.bzl  es2k_chassis_manager.cc  es2k_chassis_manager.h  es2k_chassis_manager_mock.h  es2k_chassis_manager_test.cc  es2k_hal.cc  es2k_hal.h  es2k_hal_test.cc  es2k_port_manager.h  es2k_sde_target.cc  es2k_switch.cc  es2k_switch.h  es2k_switch_test.cc  test_main.cc
stratum/hal/lib/tdi/es2k/: BUILD  CMakeLists.txt  es2k.bzl  es2k_chassis_manager.cc  es2k_chassis_manager.h  es2k_chassis_manager_mock.h  es2k_chassis_manager_test.cc  es2k_direct_pkt_mod_meter_handler.cc  es2k_direct_pkt_mod_meter_handler.h  es2k_extern_manager.cc  es2k_extern_manager.h  es2k_extern_manager_test.cc  es2k_hal.cc  es2k_hal.h  es2k_hal_test.cc  es2k_node.cc  es2k_node.h  es2k_pkt_mod_meter_handler.cc  es2k_pkt_mod_meter_handler.h  es2k_port_manager.cc  es2k_port_manager.h  es2k_port_manager_dummy.cc  es2k_port_manager_mock.h  es2k_resource_mapper.cc  es2k_resource_mapper.h  es2k_sde_meter.cc  es2k_sde_packetio.cc  es2k_sde_table_data.cc  es2k_sde_target.cc  es2k_sde_wrapper.cc  es2k_sde_wrapper.h  es2k_switch.cc  es2k_switch.h  es2k_switch_test.cc  es2k_table_helper.cc  es2k_table_helper.h  es2k_target_factory.cc  es2k_target_factory.h  es2k_tdi_status_test.cc
stratum/hal/lib/tdi/tofino/: BUILD  CMakeLists.txt  tofino_chassis_manager.cc  tofino_chassis_manager.h  tofino_chassis_manager_mock.h  tofino_chassis_manager_test.cc  tofino_hal.cc  tofino_port_manager.cc  tofino_port_manager.h  tofino_port_manager_dummy.cc  tofino_port_manager_mock.h  tofino_sde_target.cc  tofino_sde_wrapper.cc  tofino_switch.cc  tofino_switch.h  tofino_switch_test.cc
stratum/hal/lib/tdi/tofino/save/: tofino_chassis_manager_test.cc
stratum/hal/lib/yang/: BUILD  CMakeLists.txt  yang_add_subtree_interface.cc  yang_parse_tree.cc  yang_parse_tree.h  yang_parse_tree_chassis.cc  yang_parse_tree_component.cc  yang_parse_tree_component.h  yang_parse_tree_helpers.h  yang_parse_tree_interface.cc  yang_parse_tree_interface.h  yang_parse_tree_ipsec.cc  yang_parse_tree_mock.h  yang_parse_tree_node.cc  yang_parse_tree_optical.cc  yang_parse_tree_paths.h  yang_parse_tree_singleton.cc  yang_parse_tree_system.cc  yang_parse_tree_test.cc
stratum/lib/: CMakeLists.txt  macros.h  utils.cc  utils.h
stratum/lib/p4runtime/: BUILD  CMakeLists.txt  p4runtime_session.cc  sdn_controller_manager.cc
stratum/lib/security/: BUILD  CMakeLists.txt  auth_policy_checker.cc  cert_utils.cc  credentials_manager.cc  credentials_manager.h  credentials_manager_test.cc
stratum/public/: CMakeLists.txt
stratum/public/lib/: CMakeLists.txt
stratum/public/proto/: CMakeLists.txt
stratum/tools/: CMakeLists.txt
stratum/tools/gnmi/: CMakeLists.txt  gnmi_cli.cc
stratum/tools/p4_pipeline_pusher/: CMakeLists.txt
stratum/tools/stratum_replay/: CMakeLists.txt  stratum_replay.cc
tools/tls/: ca.conf  (+2 more)
(+35 files in other folders)
